--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "jest example --notify --config=config.json",
+    "test": "jest"
   },
   "dependencies": {
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
     "got": "^11.3.0",
-    "tape": "^4.7.0"
+    "jest": "^26.6.3",
+    "tape": "^4.7.0",
+    "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1"
+  },
+  "jest": {
+    "verbose": true
   },
   "repository": {
     "type": "git",
